// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatusSection should match snapshot 1`] = `
<GridItem
  className="pl-0"
>
  <Input
    id="status"
    name="status"
    type="hidden"
  />
  <Content>
    <div
      className="pb-1"
    >
      <i>
        We are currently verifying your information with our Accounts Department
      </i>
    </div>
    <b>
      Account Status:
    </b>
     
    Pending
  </Content>
</GridItem>
`;

exports[`AccountStatusSection should match snapshot with hasReapitAccountsRef is no 1`] = `
<GridItem
  className="pl-0"
>
  <Content>
    Thank you for submitting your Account Information and setting up a Direct Debit, we just need to validate your information with our Accounts Department. One this has been completed your account will be set to ‘Active’ and you can procced with any subscriptions.
  </Content>
  <Input
    id="status"
    name="status"
    type="hidden"
  />
  <Content>
    <div
      className="pb-1"
    >
      <i>
        We are currently verifying your information with our Accounts Department
      </i>
    </div>
    <b>
      Account Status:
    </b>
     
    Pending
  </Content>
</GridItem>
`;

exports[`AccountStatusSection should match snapshot with status !== pending 1`] = `
<GridItem
  className="pl-0"
>
  <Input
    id="status"
    name="status"
    type="hidden"
  />
  <Content>
    <b>
      Account Status:
    </b>
     
    Incomplete
  </Content>
</GridItem>
`;
